--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,8 @@ services:
     container_name: prod
     environment:
       kafka: 20.10.1.3
-    restart: unless-stopped
+    restart: always
+    # restart: unless-stopped
     # volumes:
     #   - ./prod/index.html:/go/index.html
     ports:
@@ -75,7 +76,8 @@ services:
       kafka: 20.10.1.3
       API_HOST: 20.10.1.8
       # API_PORT: 5431
-    restart: unless-stopped
+    restart: always
+    # restart: unless-stopped
     networks:
       test_network:
         ipv4_address: 20.10.1.6
@@ -83,7 +85,8 @@ services:
   querier:
     build: ./querier
     container_name: querier
-    restart: unless-stopped
+    restart: always
+    # restart: unless-stopped
     depends_on: 
       - discovery
     ports:
@@ -97,7 +100,8 @@ services:
   orm:
     build: ./orm
     container_name: orm
-    restart: unless-stopped
+    restart: always
+    # restart: unless-stopped
     depends_on:
       - db
       - discovery
@@ -110,7 +114,8 @@ services:
   discovery:
     build: ./discovery
     container_name: discovery
-    restart: unless-stopped
+    restart: always
+    # restart: unless-stopped
     ports:
       - '5555:5555'
     networks:
@@ -120,9 +125,10 @@ services:
   ui:
     build: ./ui
     container_name: ui
-    restart: unless-stopped
-    volumes:
-      - ./ui/index.html:/go/index.html
+    restart: always
+    # restart: unless-stopped
+    # volumes:
+    #   - ./ui/index.html:/go/index.html
     ports:
     - '8084:8084'
     networks:
