--- a/kube/test-network-networkpolicy.yaml
+++ b/kube/test-network-networkpolicy.yaml
@@ -1,14 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   creationTimestamp: null
-  name: test_network
+  name: test-network
 spec:
   ingress:
   - from:
     - podSelector:
         matchLabels:
-          io.kompose.network/test_network: "true"
+          io.kompose.network/test-network: "true"
   podSelector:
     matchLabels:
-      io.kompose.network/test_network: "true"
+      io.kompose.network/test-network: "true"
