--- a/kube/ui-deployment.yaml
+++ b/kube/ui-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.network/test_network: "true"
+        io.kompose.network/test-network: "true"
         io.kompose.service: ui
     spec:
       containers:
