--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,9 @@ services:
         ipv4_address: 20.10.1.9
 
   ui:
-    build: ./ui
+    build: 
+      context: ui
+      dockerfile: Dockerfile
     container_name: ui
     restart: always
     # restart: unless-stopped
