--- a/kube/cons-deployment.yaml
+++ b/kube/cons-deployment.yaml
@@ -30,8 +30,8 @@ spec:
           value: 20.10.1.8
         - name: kafka
           value: 20.10.1.3
-        image: cons
-        imagePullPolicy: ""
+        image: microservices-example-kube_cons:latest
+        imagePullPolicy: "IfNotPresent"
         name: cons
         resources: {}
       restartPolicy: Always
