--- a/kube/prod-deployment.yaml
+++ b/kube/prod-deployment.yaml
@@ -28,8 +28,8 @@ spec:
       - env:
         - name: kafka
           value: 20.10.1.3
-        image: prod
-        imagePullPolicy: ""
+        image: microservices-example-kube_prod:latest
+        imagePullPolicy: "IfNotPresent"
         name: prod
         ports:
         - containerPort: 8080
