--- a/kube/ui-deployment.yaml
+++ b/kube/ui-deployment.yaml
@@ -25,8 +25,8 @@ spec:
         io.kompose.service: ui
     spec:
       containers:
-      - image: ui
-        imagePullPolicy: ""
+      - image: microservices-example-kube_ui:latest
+        imagePullPolicy: "IfNotPresent"
         name: ui
         ports:
         - containerPort: 8084
