--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       # dockerfile: Dockerfile-prod
     container_name: prod
     environment:
-      kafka: 20.10.1.3
+      kafka: kafka
     restart: always
     # restart: unless-stopped
     # volumes:
@@ -73,8 +73,8 @@ services:
       # dockerfile: Dockerfile-cons
     container_name: cons
     environment:
-      kafka: 20.10.1.3
-      API_HOST: 20.10.1.8
+      kafka: kafka
+      API_HOST: orm
       # API_PORT: 5431
     restart: always
     # restart: unless-stopped
@@ -92,7 +92,7 @@ services:
     ports:
     - '8081:8081'
     environment:
-      API_HOST: 20.10.1.8
+      API_HOST: orm
     networks:
       test-network:
         ipv4_address: 20.10.1.7
