--- a/kube/cons-deployment.yaml
+++ b/kube/cons-deployment.yaml
@@ -27,9 +27,9 @@ spec:
       containers:
       - env:
         - name: API_HOST
-          value: 20.10.1.8
+          value: orm
         - name: kafka
-          value: 20.10.1.3
+          value: kafka
         image: microservices-example-kube_cons:latest
         imagePullPolicy: "IfNotPresent"
         name: cons
