--- a/kafka-broker/kafka-variables.env
+++ b/kafka-broker/kafka-variables.env
@@ -1,9 +1,9 @@
 KAFKA_ADVERTISED_HOST_NAME=kafka
 KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-KAFKA_CONNECT_BOOTSTRAP_SERVERS=localhost:9092
+KAFKA_CONNECT_BOOTSTRAP_SERVERS=kafka:9092
 
 KAFKA_CONNECT_REST_PORT=8082
-KAFKA_CONNECT_REST_ADVERTISED_HOST_NAME="localhost"
+KAFKA_CONNECT_REST_ADVERTISED_HOST_NAME="kafka"
 
 KAFKA_CONNECT_KEY_CONVERTER="org.apache.kafka.connect.json.JsonConverter"
 KAFKA_CONNECT_VALUE_CONVERTER="org.apache.kafka.connect.json.JsonConverter"
