--- a/kube/kafka-deployment.yaml
+++ b/kube/kafka-deployment.yaml
@@ -26,6 +26,8 @@ spec:
     spec:
       containers:
       - env:
+        - name: KAFKA_PORT
+          value: "9092"
         - name: KAFKA_ADVERTISED_HOST_NAME
           valueFrom:
             configMapKeyRef:
