--- a/kube/ui-deployment.yaml
+++ b/kube/ui-deployment.yaml
@@ -30,6 +30,7 @@ spec:
         name: ui
         ports:
         - containerPort: 8084
+          hostPort: 8084
         resources: {}
       restartPolicy: Always
       serviceAccountName: ""
