--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 # vendor/
 
 # kube/*
-.vscode/targets.log
-ui/__debug_bin
+.vscode/*
+!.vscode/launch.json
+!.vscode/microservices-example-kube.code-workspace
+!.vscode/settings.json
 
